_sass/_publications.scss
/*******************************************************************************
 * Publication and bibliography styles
 ******************************************************************************/

@use "variables" as v;

.publications {
  margin-top: 2rem;

  h1 {
    color: var(--global-theme-color);
    font-size: 2rem;
    text-align: center;
    margin-top: 1em;
    margin-bottom: 1em;
  }

  h2 {
    margin-bottom: 1rem;

    span {
      font-size: 1.5rem;
    }
  }

  h2.bibliography {
    color: var(--global-divider-color);
    border: none;
    padding: 0;
    margin: 1.5rem 0 -1.8rem 0;
    text-align: right;
    line-height: 1.4;
  }

  ol.bibliography {
    list-style: none;
    border-top: 1px solid var(--global-divider-color);
    padding: 0.5rem 0 0 0;
    margin-top: 0;

    li {
      margin-bottom: 1rem;

      .preview {
        display: inline-block;
      }

      .row {
        flex-wrap: nowrap;
      }

      .abbr {
        margin-bottom: 0.2rem;
        padding-right: 0.25rem;
        width: 2.8rem;
        min-width: 2.8rem;
        max-width: 2.8rem;
        text-align: right;

        .pub-label {
          display: inline-block;
          font-weight: bold;
          font-size: 0.75rem;
          color: white;
          white-space: nowrap;
          background-color: var(--global-theme-color);
          border-radius: 0.3rem;
          padding: 0.2rem 0.45rem;
          text-align: center;
        }

        .award {
          color: var(--global-theme-color) !important;
          border: 1px solid var(--global-theme-color);
        }
      }

      .title {
        font-weight: bolder;
      }

      .author {
        a {
          border-bottom: 1px dashed var(--global-theme-color);

          &:hover {
            border-bottom-style: solid;
            text-decoration: none;
          }
        }

        > em {
          border-bottom: 1px solid;
          font-style: normal;
          font-weight: bold;
        }

        > span.more-authors {
          color: var(--global-text-color-light);
          border-bottom: 1px dashed var(--global-text-color-light);
          cursor: pointer;

          &:hover {
            color: var(--global-text-color);
            border-bottom: 1px dashed var(--global-text-color);
          }
        }
      }

      .links {
        a.btn {
          color: var(--global-theme-color);
          border: 1px solid var(--global-theme-color);
          padding-left: 1rem;
          padding-right: 1rem;
          padding-top: 0.25rem;
          padding-bottom: 0.25rem;
          margin-left: 0;
          transition: all 0.2s ease;

          &:hover {
            color: white;
            background-color: var(--global-theme-color);
            border-color: var(--global-theme-color);
          }
        }
        a.award.btn {
          border-color: var(--global-highlight-color);
        }
      }

      .badges {
        padding-bottom: 0.5rem;
        span {
          display: inline-block;
          color: v.$black-color;
          height: 100%;
          padding-right: 0.5rem;
          vertical-align: middle;

          &:hover {
            text-decoration: underline;
          }
        }
      }

      .hidden {
        font-size: 0.875rem;
        max-height: 0px;
        overflow: hidden;
        text-align: justify;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;

        p {
          line-height: 1.4em;
          margin: 10px;
        }

        pre {
          font-size: 1em;
          line-height: 1.4em;
          padding: 10px;
        }
      }

      .hidden.open {
        max-height: 100em;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;
      }

      div.abstract.hidden {
        border: dashed 1px var(--global-bg-color);
      }

      div.abstract.hidden.open {
        border-color: var(--global-text-color);
      }
    }
    div.award.hidden {
      border: dashed 1px var(--global-bg-color);
    }
    div.award.hidden.open {
      border-color: var(--global-highlight-color);
    }
  }

  .btn-sm {
    font-size: 0.75rem;
    padding: 0.15rem 0.5rem;
    border-radius: 0.25rem;
    border: 1px solid var(--global-theme-color);
    color: var(--global-theme-color);
    background: transparent;
    margin-right: 0.25rem;
    transition: all 0.2s ease;

    &:hover {
      color: white;
      background-color: var(--global-theme-color);
    }
  }
}

.citation,
.citation-number {
  color: var(--global-theme-color);
}

html[data-theme="dark"] {
  .pub-label {
    color: black !important;
  }
}

/* Mobile responsive */
@media (max-width: 576px) {
  .publications {
    h2.bibliography {
      margin-bottom: 0.3rem;
      text-align: left;

      span {
        font-size: 1.1rem;
      }
    }

    ol.bibliography {
      padding-top: 0.3rem;
    }

    ol.bibliography li {
      .row {
        flex-wrap: wrap;
      }

      .abbr {
        width: auto;
        min-width: auto;
        max-width: none;
        margin-bottom: 0.1rem;
      }
    }
  }
}

